<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/commerce_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commerce_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/commerce_name_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commerce_name_label" />

        <TextView
            android:id="@+id/department_municipality_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department_municipality"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commerce_name_edittext" />

        <EditText
            android:id="@+id/department_municipality_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/department_municipality_label" />

        <TextView
            android:id="@+id/iva_nit_dui_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iva_nit_dui"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/department_municipality_edittext" />

        <EditText
            android:id="@+id/iva_nit_dui_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iva_nit_dui_label" />

        <TextView
            android:id="@+id/document_image_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attach_document_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iva_nit_dui_edittext" />

        <Button
            android:id="@+id/upload_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/document_image_label" />

        <ImageView
            android:id="@+id/document_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upload_image_button" />

        <TextView
            android:id="@+id/contact_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/document_image_view" />

        <EditText
            android:id="@+id/contact_phone_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_phone_label" />

        <TextView
            android:id="@+id/contact_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_phone_edittext" />

        <EditText
            android:id="@+id/contact_email_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_email_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>